# pz-map-generator

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  random-world-generator.csproj  reader.cs
data/B41/: 27_38.lotheader  newtiledefinitions.tiles  world_27_38.lotpack
data/B42/: 1_38.lotheader  27_38.lotheader  world_1_38.lotpack  world_27_38.lotpack
data/Challenge1/: Challenge1.pzw
data/map/: map.pzw
helpers/: build.bat  rebuild.bat  run.bat  tests.bat  vcpkg-install.bat
lib/: platform.h  timer.h
lib/files/: lotheader.cpp  lotheader.h  lotpack.cpp  texturepack.cpp  texturepack.h  tiledefinition.cpp  tiledefinition.h
lib/io/: binary_reader.cpp  binary_reader.h
lib/math/: math.cpp  math.h  md5.h
lib/services/: game_files_service.cpp  game_files_service.h  game_path_service.h
main/: app.h  main.cpp  sprite_explorer_panel.cpp  sprite_explorer_panel.h  sprite_info_panel.cpp  sprite_info_panel.h
main/cell_viewer/: cell_viewer.cpp  cell_viewer.h
main/tiles_browser/: sprite_explorer_panel.cpp  sprite_explorer_panel.h  tiles_browser.cpp  tiles_browser.h
native/: buf_reader_extensions.rs  cell_coord.rs  constants.rs  lotheader.rs  lotpack.rs  main.rs
src/: Constants.cs  Layer.cs  LotheaderFile.cs  LotpackFile.cs  PackFile.cs  Program.cs  SourceImage.cs  TileSet.cs  TmxFile.cs  TmxReader.cs  Utils.cs  constants.h  exceptions.h  main.cpp
src/Extensions/: ByteArrayExtensions.cs
src/core/: cell_coord.cpp  cell_coord.h
src/math/: md5.cpp
tests/: main.tests.cpp  test_binary_reader.cpp  test_cell_coord.cpp  test_main.cpp
(+14 files in other folders)
